Continue developing code

--- a/index.html
+++ b/index.html
@@ -10,6 +10,38 @@
 </head>
 <body>
 
+    <header>
+        <div class="container">
+
+        <img src="Images/logotype.jpg" alt="Pingispågarna" width="110" height="85"> 
+        <button class="menu-bars"><i class="fa-sharp fa-solid fa-bars-staggered fa-rotate-180 fa-lg"></i></button>
+        <div class="menu">
+        <div class="top-menu">
+            <div class="contact-information">
+                <div class="content-box">
+                    <i class="fa-duotone fa-phone fa-lg"></i>
+                    +46 (8) 121 470 50
+                </div>
+                <div class="content-box">
+                    <i class="fa-sharp fa-regular fa-envelope"></i>
+                    pingispagarna@gmail.com
+                </div>
+                <div class="content-box last">
+                    <i class="fa-light fa-location-dot"></i>
+                    Sveavägen 31, 111 34 STOCKHOLM
+                </div>
+            </div>
+            <div class="social-media">
+                <a href="https://www.facebook.com/Pingispagarna" target="_blank"><i class="fa-brands fa-facebook" style="color: #335899;"></i></a>
+                <a href="https://www.instagram.com/pingispagarna/" target="_blank"><i class="fa-brands fa-instagram" style="color: #c73333;"></i></a>
+                <a href="https://www.youtube.com/@Pingispagarna/featured" target="_blank"><i class="fa-brands fa-youtube" style="color: #ce2c2c;"></i></a>
+                <a href="https://www.tiktok.com/@pingispagarna" target="_blank"><i class="fa-brands fa-tiktok" style="color: #ffffff6a;"></i></a>
+            </div>
+        </div>
+            <div>Menu</div>
+            </div>
+        </div>
+    </header>
 
 </body>
 </html>
