--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="container">
 
-        <img src="Images/logotype.jpg" alt="Pingispågarna" width="110" height="85"> 
+        <img src="Images/logotype.jpg" alt="Pingispågarna" width="110" height="95"> 
         <button class="menu-bars"><i class="fa-sharp fa-solid fa-bars-staggered fa-rotate-180 fa-lg"></i></button>
         <div class="menu">
         <div class="top-menu">
@@ -38,7 +38,16 @@
                 <a href="https://www.tiktok.com/@pingispagarna" target="_blank"><i class="fa-brands fa-tiktok" style="color: #ffffff6a;"></i></a>
             </div>
         </div>
-            <div>Menu</div>
+            <div class="main-menu">
+                <nav>
+                    <a href="home.html">Home</a>
+                    <a href="videos.html">Videos</a>
+                    <a href="aboutus.html">About us</a>
+                    <a href="ppmerch.html">PP Merch</a>
+                    <a href="contact.html">Contact</a>
+                </nav>
+                <a href="login.html">Login <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+            </div>
             </div>
         </div>
     </header>
