Changing btn-red

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="ppmerch.html">PP Merch</a>
                     <a href="contact.html">Contact</a>
                 </nav>
-                <a href="login.html">Login <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+                <a class= "btn-red" href="login.html">Login <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
             </div>
             </div>
         </div>
