--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                 </div>
             </div>
             <div class="social-media">
-                <a href="https://www.facebook.com/Pingispagarna" target="_blank"><i class="fa-brands fa-facebook" style="color: #335899;"></i></a>
-                <a href="https://www.instagram.com/pingispagarna/" target="_blank"><i class="fa-brands fa-instagram" style="color: #c73333;"></i></a>
-                <a href="https://www.youtube.com/@Pingispagarna/featured" target="_blank"><i class="fa-brands fa-youtube" style="color: #ce2c2c;"></i></a>
-                <a href="https://www.tiktok.com/@pingispagarna" target="_blank"><i class="fa-brands fa-tiktok" style="color: #ffffff6a;"></i></a>
+                <a href="https://www.facebook.com/Pingispagarna" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/pingispagarna/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.youtube.com/@Pingispagarna/featured" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.tiktok.com/@pingispagarna" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
             </div>
         </div>
             <div class="main-menu">
