showcase almost finish

--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 </head>
 <body>
 
+    <!-- Header Section -->
     <header>
         <div class="container">
 
-        <img src="Images/logotype.jpg" alt="Pingispågarna" width="110" height="95"> 
+        <a href="index.html"><img src="Images/logotype.jpg" alt="Pingispågarna" width="110" height="95"></a>
         <button class="menu-bars"><i class="fa-sharp fa-solid fa-bars-staggered fa-rotate-180 fa-lg"></i></button>
         <div class="menu">
         <div class="top-menu">
@@ -40,7 +41,7 @@
         </div>
             <div class="main-menu">
                 <nav>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                     <a href="videos.html">Videos</a>
                     <a href="aboutus.html">About us</a>
                     <a href="ppmerch.html">PP Merch</a>
@@ -52,5 +53,21 @@
         </div>
     </header>
 
+    <!-- Showcase Section -->
+<section class="showcase">
+    <div class="container">
+        <div class="content">
+            <h1>We Provide High Quality Videos For Table Tennis</h1>
+            <p>Our vision is to help Table Tennis coaches and players all over the world with their training, work and development. We can do that by Online Coaching and Arrange Camps.</p>
+            <a class= "btn-red" href="ppmerch.html">Buy Merch <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a class= "btn-transparent" href="videos.html">Buy Online Coaching<i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+        </div>
+        <img src="Images/PPshowcase.jpg" alt="showcase image" width="500" height="500">
+    </div>
+
+</section>
+
+
+<div style="height: 2000px;"></div>
 </body>
 </html>
