new logotype added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
 
-        <a href="index.html"><img src="Images/logotype.jpg" alt="Pingispågarna" width="110" height="95"></a>
+        <a href="index.html"><img src="Images/logotypepp1.gif" alt="Pingispågarna" width="110" height="95"></a>
         <button class="menu-bars"><i class="fa-sharp fa-solid fa-bars-staggered fa-rotate-180 fa-lg"></i></button>
         <div class="menu">
         <div class="top-menu">
