Project and Case Section developing

--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
 
 </section>
 
+<!-- Project and Case studies section -->
+<section class="project-and-case">
+    <div class="container">
+    <div class="section-title">
+        <p>Project and case studies</p>
+        <h2>Let`s looks our global projects</h2>
+    </div>
+
+    </div>
+
+
+</section>
 
 <div style="height: 2000px;"></div>
 </body>
