Article images added

--- a/index.html
+++ b/index.html
@@ -71,8 +71,30 @@
 <section class="project-and-case">
     <div class="container">
     <div class="section-title">
-        <p>Project and case studies</p>
-        <h2>Let`s looks our global projects</h2>
+        <p>Project and Events</p>
+        <h2>Pingispågarna Community</h2>
+    </div>
+    <div class="project-and-cases">
+        <article>
+            <img src="Images/articleimage1.jpg" alt="Gathering with much people" width="430" height="300">
+            <h3>Arranged Camps</h3>
+            <a href="#">Read More </a>
+        </article>
+        <article>
+            <img src="Images/articleimage2.jpg" alt="Girl and a boy plays" width="430" height="300">
+            <h3>Online Coaching</h3>
+            <a href="#">Read More </a>
+        </article>
+        <article>
+            <img src="Images/articleimage3.jpg" alt="2 man infront of a store" width="430" height="300">
+            <h3>Partnership and Sponsors</h3>
+            <a href="#">Read More </a>
+        </article>
+        <article>
+            <img src="Images/articleimage4.jpg" alt="2 people plays table tennis at a event with a lot of people" width="430" height="300">
+            <h3>Events</h3>
+            <a href="#">Read More </a>
+        </article>
     </div>
 
     </div>
