Project and Case section is finished!

--- a/index.html
+++ b/index.html
@@ -75,28 +75,30 @@
         <h2>Take a look at PP-Community</h2>
     </div>
     <div class="project-and-cases">
-        <article>
+        <a class= "project" href="#">
             <img src="Images/articleimage1.jpg" alt="Gathering with much people" width="645" height="350">
             <h3>Arranged Camps</h3>
-            <a href="#">Read More </a>
-        </article>
-        <article>
+            <div class="readmore">Read More <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i> </div>
+        </a>
+        <a class= "project" href="#">
             <img src="Images/articleimage2.jpg" alt="Girl and a boy plays" width="645" height="350">
             <h3>Online Coaching</h3>
-            <a href="#">Read More </a>
-        </article>
-        <article>
+            <div class="readmore">Read More <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i> </div>
+        </a>
+        <a class= "project" href="#">
             <img src="Images/articleimage3.jpg" alt="2 man infront of a store" width="645" height="350">
             <h3>Partnership and Sponsors</h3>
-            <a href="#">Read More </a>
-        </article>
-        <article>
+            <div class="readmore">Read More <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i> </div>
+        </a>
+        <a class= "project" href="#">
             <img src="Images/articleimage4.jpg" alt="2 people plays table tennis at a event with a lot of people" width="645" height="350">
             <h3>Events</h3>
-            <a href="#">Read More </a>
-        </article>
+            <div class="readmore">Read More <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i> </div>
+        </a>
     </div>
-
+    <div class="center-content">
+    <a class= "btn-black" href="projects.html">All Recent Projects<i class= "fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+    </div>
     </div>
 
 
