Images changed and newsletter finish

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
     <!-- Showcase Section -->
 <section class="showcase">
+    <img class="background-lines" src="Images/background-lines.png" alt="">
     <div class="container">
         <div class="content">
             <h1>We Provide High Quality Videos For Table Tennis</h1>
@@ -101,6 +102,20 @@
     </div>
     </div>
 
+
+</section>
+
+<!-- Newsletter section -->
+<section class="newsletter">
+    <img class="background-lines-right" src="Images/background-lines-right.svg" alt="">
+    <div class="container">
+            <h2>Get News Updates By Signup</h2>
+            <form>
+                <input type="text" placeholder="username@domain.com">
+                <button class="btn-red">Subscribe<i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></button>
+            </form>
+
+    </div>
 
 </section>
 
