Meet our team members images added

--- a/index.html
+++ b/index.html
@@ -105,6 +105,39 @@
 
 </section>
 
+<!-- Meet our team section -->
+<section class="meet-our-team">
+    <div class="container">
+        <div class="section-title">
+            <p>Meet our team</p>
+            <h2>Expirence team members</h2>
+        </div>
+        <div class="meet-our-team-members">
+            <a class= "members" href="#">
+                <img src="Images/wb.png" alt="">
+                <h4>William Björklund</h4>
+                <h7>Table Tennis Coach</h7>
+            </a>
+            <a class= "members" href="#">
+                <img src="Images/loa.png" alt="">
+                <h4>Loa Schoug</h4>
+                <h7>Table Tennis Coach</h7>
+            </a>
+            <a class= "members" href="#">
+                <img src="Images/emile.png" alt="">
+                <h4>Emile Zaidan</h4>
+                <h7>Producer and Video Editor</h7>
+            </a>
+            <a class= "members" href="#">
+                <img src="Images/CB.png" alt="">
+                <h4>Christian Björklund</h4>
+                <h7>Table Tennis Coach</h7>
+            </a>
+        </div>
+    </div>
+</section>
+
+
 <!-- Newsletter section -->
 <section class="newsletter">
     <img class="background-lines-right" src="Images/background-lines-right.svg" alt="">
