Services section finish!

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 </section>
 
     <!-- Services Section -->
-<section class="Services">
-    <body>
+<section class="service-consulting">
+    <div class="service-header">
         <p id="top-left">Our Services</p>
         <h1>We Provide the Best Service for Consulting</h1>
     </div>
@@ -78,21 +78,31 @@
         <div class="service-box">
             <h2>Business Advice</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
+            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
         </div>
         <div class="service-box">
-            <h2>Service 2</h2>
+            <h2>Startup Business</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
+            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
         </div>
         <div class="service-box">
-            <h2>Service 3</h2>
+            <h2>Financial Advice</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
+            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
         </div>
         <div class="service-box">
-            <h2>Service 4</h2>
+            <h2>Risk Management</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
+            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
         </div>
+        <a class= "btn-transparent" href="services.html">Browse Services<i class= "fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+        <div class="container">
+        <img src="Images/background-lines-right.svg" alt="lines">
     </div>
-    </body>
+    </div>
+</div>
+
+    
 </section>
 
 <!-- Consulting Agency Section -->
