Finsihed our company section!!

--- a/index.html
+++ b/index.html
@@ -68,6 +68,31 @@
 
 </section>
 
+<section class="about-our-company">
+<div class="container">
+    <div class="left-section">
+        <img src="Images/CB&SIS.jpg" alt="Din Bild" width="100%">
+        <div class="image-overlay">
+            <h5>Christian Björklund & Loa Schoug, <h5 class="founders-text">Founders</h5>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."</p>
+        </div>
+    </div>
+    <div class="right-section">
+        <div class="about-company">About Company</div>
+        <div class="company-name">We Are Business Consulting & Credit Repair Experts</div>
+        <p class="small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos.</p>
+        <p class="small-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis esse quasi incidunt adipisci accusantium libero provident voluptate amet.</p>
+        <div class="button-container">
+        <a class="btn-black" href="company.html">Learn More <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+        <div class="circle-play-container">
+            <i class="fa-sharp fa-regular fa-circle-play" style="color: #191919; font-size: 24px;"></i>
+            <span class="intro-video-text">Intro Video</span>
+        </div>
+        </div>
+    </div>
+</div>
+</section>
+
     <!-- Services Section -->
 <section class="service-consulting">
     <div class="service-header">
