Almost finished with features section...

--- a/index.html
+++ b/index.html
@@ -68,6 +68,45 @@
 
 </section>
 
+
+<section class="features">
+    <div class="container1">
+        <p>Features</p>
+        <h2>Our Accounting is trusted by thousand of companies</h2>
+        <a class= "btn-red" href="learnmore.html">Learn More <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+    </div>
+
+
+    <div class="container2">
+        <div class="profile-1">
+        <img src="Images/Icon.png" alt="Ikon 1">
+        <h5>Business Advice</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+    <div class="profile-2">
+        <img src="Images/Icon (1).png" alt="Ikon 2">
+        <h5>Financial Advice</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+    </div>
+
+
+    <div class="container3">
+        <div class="profile-3">
+        <img src="Images/Icon (2).png" alt="Ikon 3">
+        <h5>Startup Business</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+    <div class="profile-4">
+        <img src="Images/Icon (3).png" alt="Ikon 4">
+        <h5>Risk Management</h5>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    </div>
+    </div>
+
+</section>
+
+    <!-- About Company Section -->
 <section class="about-our-company">
 <div class="container">
     <div class="left-section">
@@ -85,7 +124,7 @@
         <div class="button-container">
         <a class="btn-black" href="company.html">Learn More <i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
         <div class="circle-play-container">
-            <i class="fa-sharp fa-regular fa-circle-play" style="color: #191919; font-size: 24px;"></i>
+            <i class="fa-sharp fa-regular fa-circle-play" style="color: #191919; font-size: 34px;"></i>
             <span class="intro-video-text">Intro Video</span>
         </div>
         </div>
@@ -127,10 +166,9 @@
     </div>
 </div>
 
-    
 </section>
 
-<!-- Consulting Agency Section -->
+    <!-- Consulting Agency Section -->
 <section class="consulting-agency">
     <div class="left-grid">
     
@@ -189,7 +227,7 @@
 </section>
 
 
-<!-- Project and Case studies section -->
+    <!-- Project and Case studies section -->
 <section class="project-and-case">
     <div class="container">
     <div class="section-title">
@@ -226,7 +264,7 @@
 
 </section>
 
-<!-- Meet our team section -->
+    <!-- Meet our team section -->
 <section class="meet-our-team">
     <div class="container">
         <div class="section-title">
@@ -324,7 +362,7 @@
 </section>
 
 
-<!-- Newsletter section -->
+    <!-- Newsletter section -->
 <section class="newsletter">
     <img class="background-lines-right" src="Images/background-wavy-lines.svg" alt="">
     <div class="container">
