Features section done!!!

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 
 
 <section class="features">
+<div class="container-border">
     <div class="container1">
         <p>Features</p>
         <h2>Our Accounting is trusted by thousand of companies</h2>
@@ -103,6 +104,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
     </div>
     </div>
+</div>
 
 </section>
 
