--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
 </section>
 
-    <!-- Project and Case studies section -->
+    <!-- Project And Case Studies Section -->
 <section class="project-and-case">
     <div class="container">
     <div class="section-title">
@@ -287,7 +287,7 @@
 
 </section>
 
-    <!-- Meet our team section -->
+    <!-- Meet Our Team section -->
 <section class="meet-our-team">
     <div class="container">
         <div class="section-title">
@@ -384,6 +384,7 @@
     </div>
 </section>
 
+    <!-- Article & News Section -->
 <section class="Article-and-News">
     <div class="article-grid">
         <div class="header-text">
@@ -443,7 +444,7 @@
     
 </section>
 
-    <!-- Newsletter section -->
+    <!-- Newsletter Section -->
 <section class="newsletter">
     <img class="background-lines-right" src="Images/background-wavy-lines.svg" alt="">
     <div class="container">
