All transitions soon fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <!-- Header Section -->
-    <header>
+<header>
         <div class="container">
 
         <a href="index.html"><img src="Images/logotypepp1.gif" alt="Pingispågarna" width="110" height="95"></a>
@@ -51,7 +51,7 @@
             </div>
             </div>
         </div>
-    </header>
+</header>
 
     <!-- Showcase Section -->
 <section class="showcase">
@@ -166,22 +166,22 @@
         <div class="service-box">
             <h2>Business Advice</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
-            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
+            <a href="#"><i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i></a>
         </div>
         <div class="service-box">
             <h2>Startup Business</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
-            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
+            <a href="#"><i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i></a>
         </div>
         <div class="service-box">
             <h2>Financial Advice</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
-            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
+            <a href="#"><i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i></a>
         </div>
         <div class="service-box">
             <h2>Risk Management</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officiis in nam possimus.</p>
-            <i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i>
+            <a href="#"><i class="fa-solid fa-arrow-right arrow-icon" style="color: #ffffff;"></i></a>
         </div>
         <a class= "btn-transparent" href="services.html">Browse Services<i class= "fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
         <div class="container">
@@ -458,6 +458,60 @@
 
 </section>
 
-<div style="height: 2000px;"></div>
+    <!-- Menu End Section -->
+<section class="Menu-end">
+<div class="grid-container">
+    <!-- Fraktion 1 -->
+    <div class="showcase-fraction">
+        <a href="index.html"><img src="Images/logotypepp1.gif" alt="Pingispågarna" width="110" height="95"></a>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+    </div>
+    <!-- Fraktion 2 -->
+    <div class="fraction">
+        <h4>Company</h4>
+        <p>About</p>
+        <p>Features</p>
+        <p>Work</p>
+        <p>Career</p>
+    </div>
+    <!-- Fraktion 3 -->
+    <div class="fraction">
+        <h4>Help</h4>
+        <p>Customer Support</p>
+        <p>Delivery Details</p>
+        <p>Terms & Conditions</p>
+        <p>Privacy Policy</p>
+    </div>
+    <!-- Fraktion 4 -->
+    <div class="fraction">
+        <h4>Resources</h4>
+        <p>Free eBooks</p>
+        <p>Development Tutorial</p>
+        <p>How to Blog</p>
+        <p>Youtube Playlist</p>
+    </div>
+    <!-- Fraktion 5 -->
+    <div class="fraction">
+        <h4>Link</h4>
+        <p>Free eBooks</p>
+        <p>Development Tutorial</p>
+        <p>How to Blog</p>
+        <p>Youtube Playlist</p>
+    </div>
+</div>
+<div class="lines">
+<img src="Images/background-lines-white-right.svg" alt="Linjer">
+</div>
+</section>
+
+    <!-- Text Social Media Section -->
+<section class="text-social-media">
+        <p>© 2020 Pingispågarna - Table Tennis Company. All Rights Reserved.</p>
+        <a href="https://www.facebook.com/Pingispagarna" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://www.instagram.com/pingispagarna/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.youtube.com/@Pingispagarna/featured" target="_blank"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://www.tiktok.com/@pingispagarna" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+</section>
+
 </body>
 </html>
